--- a/QuotablesToday/MainInterface.storyboard
+++ b/QuotablesToday/MainInterface.storyboard
@@ -27,13 +27,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QsR-Zf-ASh">
-                                <rect key="frame" x="231" y="122" width="73" height="30"/>
+                                <rect key="frame" x="16" y="122" width="36" height="29"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="73" id="NxO-MJ-fen"/>
-                                    <constraint firstAttribute="height" constant="30" id="ede-F7-AhP"/>
+                                    <constraint firstAttribute="height" constant="29" id="FZk-2L-OE9"/>
+                                    <constraint firstAttribute="width" constant="36" id="iUy-CN-pwL"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="15"/>
-                                <state key="normal" title="Edit Quote">
+                                <state key="normal" title="EDIT">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -42,13 +42,13 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="k3X-xu-K2x">
-                                <rect key="frame" x="16" y="122" width="81" height="30"/>
+                                <rect key="frame" x="247" y="122" width="38" height="29"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="81" id="80u-Sx-dBS"/>
-                                    <constraint firstAttribute="height" constant="30" id="XlI-uA-p4a"/>
+                                    <constraint firstAttribute="width" constant="38" id="IqZ-uL-unW"/>
+                                    <constraint firstAttribute="height" constant="29" id="rN3-Pz-ouC"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" name="Palatino-Roman" family="Palatino" pointSize="15"/>
-                                <state key="normal" title="Save Quote">
+                                <state key="normal" title="SAVE">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -58,13 +58,13 @@
                             </button>
                         </subviews>
                         <constraints>
+                            <constraint firstItem="QsR-Zf-ASh" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" id="3kM-sB-QHh"/>
                             <constraint firstItem="Oqf-5K-5Wu" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" id="44v-ho-0Ot"/>
-                            <constraint firstItem="QsR-Zf-ASh" firstAttribute="trailing" secondItem="S3S-Oj-5AN" secondAttribute="trailingMargin" id="Hla-uh-o7z"/>
-                            <constraint firstItem="QsR-Zf-ASh" firstAttribute="top" secondItem="Oqf-5K-5Wu" secondAttribute="bottom" constant="8" id="OBb-no-t8i"/>
-                            <constraint firstItem="k3X-xu-K2x" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leadingMargin" id="g6I-Xp-bwG"/>
+                            <constraint firstItem="k3X-xu-K2x" firstAttribute="top" secondItem="Oqf-5K-5Wu" secondAttribute="bottom" constant="8" id="TfW-RN-ZE7"/>
+                            <constraint firstItem="k3X-xu-K2x" firstAttribute="trailing" secondItem="S3S-Oj-5AN" secondAttribute="trailingMargin" constant="-19" id="dI3-UJ-zL1"/>
                             <constraint firstItem="Oqf-5K-5Wu" firstAttribute="trailing" secondItem="S3S-Oj-5AN" secondAttribute="trailingMargin" constant="-19" id="jCA-cz-VR7"/>
-                            <constraint firstItem="k3X-xu-K2x" firstAttribute="top" secondItem="Oqf-5K-5Wu" secondAttribute="bottom" constant="8" id="jtE-lB-1ie"/>
                             <constraint firstItem="Oqf-5K-5Wu" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="8" id="orW-hq-C65"/>
+                            <constraint firstItem="QsR-Zf-ASh" firstAttribute="top" secondItem="Oqf-5K-5Wu" secondAttribute="bottom" constant="8" id="yx1-V9-ohM"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
